--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div id="content">
         <h1>WELCOME TO HAMPUS WORLD!</h1>
         <p>This site is to fuel my ego lol!</p>
-        <p>So did you see my ex-girlfriend Fox, she's a *****!</p>
+        <p>So did you see my ex-girlfriend Fox, she's a wh*re!</p>
         <p>Anyway, follow me on social media!</p>
         <p><a href="https://twitter.com/BESTHAMPUS" target="_blank">Twitter</a></p>
         <p><a href="https://www.tiktok.com/@besthampus?_t=8nXcyNyqXxI&_r=1" target="_blank">TikTok</a></p>
