--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -11,19 +11,21 @@
             color: lime;
             margin: 0;
             display: flex;
+            white-space: nowrap;
             justify-content: center;
             align-items: center;
             height: 100vh;
             width: 100vw;
             text-align: center;
+            text-overflow: ellipsis;
             overflow: hidden;
             position: relative;
         }
         h1 {
-            font-size: 24px;
+            font-size: 60px;
         }
         p {
-            font-size: 18px;
+            font-size: 30px;
         }
         a {
             color: lime;
@@ -57,9 +59,11 @@
 <body>
     <div id="content">
         <h1>WELCOME TO HAMPUS WORLD!</h1>
-        <p>This site is to fuel my ego lol!</p>
-        <p>So did you see my ex-girlfriend Fox, she's a wh*re!</p>
-        <p>Anyway, follow me on social media!</p>
+        <p>Så kan några av er här läsa Svenska?</p>
+        <p>Så jag har en pojkvän nu.</p>
+        <p>Jag trodde inte heller det skulle hända.</p>
+        <p>Har ni sett något bra på tv på sistone?</p><br>
+        <p>Follow me on social media, would ya?</p>
         <p><a href="https://twitter.com/BESTHAMPUS" target="_blank">Twitter</a></p>
         <p><a href="https://www.tiktok.com/@besthampus?_t=8nXcyNyqXxI&_r=1" target="_blank">TikTok</a></p>
         <p><a href="https://youtube.com/@hampusisbest?si=iXJP548P7OzswvgZ" target="_blank">YouTube</a></p> 
