--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -48,9 +48,9 @@
             background: repeating-linear-gradient(
                 to bottom,
                 rgba(0, 0, 0, 0) 0px,
-                rgba(0, 0, 0, 0) 2px,
-                rgba(0, 0, 0, 0.3) 2px,
-                rgba(0, 0, 0, 0.3) 4px
+                rgba(0, 0, 0, 0) 1px,
+                rgba(0, 0, 0, 0.3) 1px,
+                rgba(0, 0, 0, 0.3) 2px
             );
             z-index: 2;
         }
@@ -59,10 +59,18 @@
 <body>
     <div id="content">
         <h1>WELCOME TO HAMPUS WORLD!</h1>
-        <p>Så kan några av er här läsa Svenska?</p>
-        <p>Så jag har en pojkvän nu.</p>
-        <p>Jag trodde inte heller det skulle hända.</p>
-        <p>Har ni sett något bra på tv på sistone?</p><br>
+        <p>So any of you guys who can read Swedish?</p>
+        <p>And I have a boyfriend now.</p>
+        <p>I know right, I didn't think that'd happend either.</p>
+        <p>Also, apparently I can make as many sentences as I want.</p>
+        <p>So did you guys see that new video from Markiplier?</p>
+        <p>He played the game called:
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">FLATHEAD!</a></p>
+        <p>That game looks scary, but also good.</p>
+        <p>Fun fact: if you want to meet me on VRChat, just look for a guy called BestHampus.</p>
+        <p>I'm normaly snuggle or talk to my boyfriend when you find me.</p>
+        <p>As he's with me 85% of the time.</p>
+        <p>Anyway, see ya there, ye?</p><br>
         <p>Follow me on social media, would ya?</p>
         <p><a href="https://twitter.com/BESTHAMPUS" target="_blank">Twitter</a></p>
         <p><a href="https://www.tiktok.com/@besthampus?_t=8nXcyNyqXxI&_r=1" target="_blank">TikTok</a></p>
