--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
             <p>I don't like Pinapples!</p>
             <p>Pinapples do NOT belong on pizza!</p>
             <p>I'm so bored!</p><br>
+            <p>Thanks to ChatGPT for helping me make the site scrollable!</p></br>
             <p>Follow me on social media, would ya?</p>
             <p><a href="https://twitter.com/BESTHAMPUS" target="_blank">Twitter</a></p>
             <p><a href="https://www.tiktok.com/@besthampus?_t=8nXcyNyqXxI&_r=1" target="_blank">TikTok</a></p>
