--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <p>I don't like Pinapples!</p>
             <p>Pinapples do NOT belong on pizza!</p>
             <p>I'm so bored!</p><br>
-            <p>There's a <a href="https://besthampus.github.io/HampusHell/">SAFE HAVEN!</a></p>
+            <p>YOU NEED TO <a href="https://besthampus.github.io/HampusHell/">GO DEEPER!</a></p>
             <p>Follow me on social media, would ya?</p>
             <p><a href="https://twitter.com/BESTHAMPUS" target="_blank">Twitter</a></p>
             <p><a href="https://www.tiktok.com/@besthampus?_t=8nXcyNyqXxI&_r=1" target="_blank">TikTok</a></p>
