--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <body>
     <div id="scroll-container">
         <div id="content">
-            <h1>WELCOME TO HAMPUS WORLD!</h1>
+            <h1>WELCOME TO HAMPUS'S WORLD!</h1>
             <p>Today I will snuggle my boyfriend!</p>
             <p>If you can get Riley to read this...</p>
             <p>Could you tell her I no longer hate her?</p>
