--- a/index.html
+++ b/index.html
@@ -70,15 +70,9 @@
     <div id="scroll-container">
         <div id="content">
             <h1>WELCOME TO HAMPUS'S WORLD!</h1>
-            <p>Today I will snuggle my boyfriend!</p>
-            <p>If you can get Riley to read this...</p>
-            <p>Could you tell her I no longer hate her?</p>
-            <p>I don't care for her, or her friends.</p>
-            <p>I don't know what else to type here so...</p>
-            <p>I'll just fill the rest with weird thoughts I have!</p><br>
-            <p>I don't like Pinapples!</p>
-            <p>Pinapples do NOT belong on pizza!</p>
-            <p>I'm so bored!</p><br>
+            <p>Tomorrow I will eat pizza!</p>
+            <p>Tomorrow I will also try survive!</p>
+            <p>Green isn't a creative color!</p><br>
             <p>YOU NEED TO <a href="https://besthampus.github.io/HampusHell/">GO DEEPER!</a></p>
             <p>Follow me on social media, would ya?</p>
             <p><a href="https://twitter.com/BESTHAMPUS" target="_blank">Twitter</a></p>
