--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <p>Tomorrow I will eat pizza!</p>
             <p>Tomorrow I will also try survive!</p>
             <p>Green isn't a creative color!</p><br>
-            <p>YOU NEED TO <a href="https://besthampus.github.io/HampusHell/">GO DEEPER!</a></p>
+            <p>YOU NEED TO <a href="https://besthampus.github.io/HampusHell/">GO DEEPER!</a></p><br>
             <p>Follow me on social media, would ya?</p>
             <p><a href="https://twitter.com/BESTHAMPUS" target="_blank">Twitter</a></p>
             <p><a href="https://www.tiktok.com/@besthampus?_t=8nXcyNyqXxI&_r=1" target="_blank">TikTok</a></p>
