--- a/index.html
+++ b/index.html
@@ -70,14 +70,15 @@
     <div id="scroll-container">
         <div id="content">
             <h1>WELCOME TO HAMPUS'S WORLD!</h1>
-            <p>Tomorrow I will eat pizza!</p>
-            <p>Tomorrow I will also try survive!</p>
-            <p>Green isn't a creative color!</p><br>
+            <p>So ye, this is probably my biggest project in a long time.</p>
+            <p>Also, look forward to July 27th!</p>
+            <p>If you know what I mean, you probably having a panic attack right now!</p>
+            <p>Also, please, tell "Bosse" from me, that I think he's cute! <3</p><br>
             <p>YOU NEED TO <a href="https://besthampus.github.io/HampusHell/">GO DEEPER!</a></p><br>
             <p>Follow me on social media, would ya?</p>
             <p><a href="https://twitter.com/BESTHAMPUS" target="_blank">Twitter</a></p>
             <p><a href="https://www.tiktok.com/@besthampus?_t=8nXcyNyqXxI&_r=1" target="_blank">TikTok</a></p>
-            <p><a href="https://youtube.com/@hampusisbest?si=iXJP548P7OzswvgZ" target="_blank">YouTube</a></p> 
+            <p><a href="https://youtube.com/@hampusisbest?si=iXJP548P7OzswvgZ" target="_blank">YouTube</a></p>
         </div>
     </div>
     <div id="scanlines"></div>
