--- a/index.html
+++ b/index.html
@@ -80,7 +80,13 @@
             <p><a href="https://www.tiktok.com/@besthampus?_t=8nXcyNyqXxI&_r=1" target="_blank">TikTok</a></p>
             <p><a href="https://youtube.com/@hampusisbest?si=iXJP548P7OzswvgZ" target="_blank">YouTube</a></p>
         </div>
+       
     </div>
     <div id="scanlines"></div>
+    <!--HI?-->
+    <!--Inspecting the code are we?-->
+    <!--Did you know I would love if you talk sexually to me?-->
+    <!--Also, did you know I made these notes to talk to you?-->
+    <!--if they won't make sense to other people other than you!-->
 </body>
 </html>
