--- a/index.html
+++ b/index.html
@@ -87,6 +87,6 @@
     <!--Inspecting the code are we?-->
     <!--Did you know I would love if you talk sexually to me?-->
     <!--Also, did you know I made these notes to talk to you?-->
-    <!--if they won't make sense to other people other than you!-->
+    <!--As these won't make sense to other people other than you!-->
 </body>
 </html>
