--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
             <p>Follow me on social media, would ya?</p>
             <p><a href="https://twitter.com/BESTHAMPUS" target="_blank">Twitter</a></p>
             <p><a href="https://www.tiktok.com/@besthampus?_t=8nXcyNyqXxI&_r=1" target="_blank">TikTok</a></p>
-            <p><a href="https://youtube.com/@hampusisbest?si=iXJP548P7OzswvgZ" target="_blank">YouTube</a></p>
+            <p><a href="https://youtube.com/@hampusisbest?si=iXJP548P7OzswvgZ" target="_blank">YouTube</a></p><br>
+            <p><a href="https://besthampus.github.io/YouLikeWebsitesDontYou/" target="_blank">Do you wanna surf the web?</a></p><br>
         </div>
        
     </div>
