--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
             <p><a href="https://besthampus.github.io/YouLikeWebsitesDontYou/" target="_blank">Do you wanna surf the web?</a></p>
             <p>Watch me be drunk on <a href="https://besthampus.github.io/DrunkTube/">DrunkTube.</a></p>
             <p>Or try this corrupted <a href="https://besthampus.github.io/CorruptedTerminal/">terminal!</a></p>
-            <p>Check out my favorite <a href="https://besthampus.github.io/LoveIsPassion/">quote!</a></p><br>
-            <p>For admin's <a href="https://besthampus.github.io/Admin/">only!</a></p><br>
+            <p>Check out my favorite <a href="https://besthampus.github.io/LoveIsPassion/">quote!</a></p>
+            <p>For admin's <a href="https://besthampus.github.io/Admin/">only!</a></p>
         </div>
              </div>
     <div id="scanlines"></div>
