--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div id="scroll-container">
         <div id="content">
             <h1>WELCOME TO HAMPUS'S WORLD!</h1><br>
-            <p>Tell me is Hampus <a href="https://besthampus.github.io/Status/">Single?</a></p>
+            <p>Tell me, is Hampus <a href="https://besthampus.github.io/Status/">single?</a></p>
             <p>Watch me be drunk on <a href="https://besthampus.github.io/DrunkTube/">DrunkTube.</a></p>
             <p>YOU NEED TO <a href="https://besthampus.github.io/HampusHell/">GO DEEPER!</a></p><br>
             <p>Follow me on social media, would ya?</p>
